--- a/day_1-14Nov.ipynb
+++ b/day_1-14Nov.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/satyamnewale/numpy-Book/blob/main/day_1-14Dev.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/satyamnewale/numpy-Book/blob/main/day_1-14Nov.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -344,13 +344,102 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "copy vs view - test & explain"
+      ],
       "metadata": {
-        "id": "IljElJ2Zc4qt"
+        "id": "hMj3-wceq-F2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "a = np.array([1,2,3,4,5])\n",
+        "b = a[1:]\n",
+        "b[0] = 0\n",
+        "print(f\"effect on a: {a}, changes in b: {b}\")\n",
+        "\n",
+        "c = a.copy()\n",
+        "c[2] = 6\n",
+        "\n",
+        "print(f\"effect on a: {a}, changes in c: {c}\")"
+      ],
+      "metadata": {
+        "id": "UJGjh4oirJPi",
+        "outputId": "2886d93c-3bb7-4393-8b8d-bc592a488554",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "effect on a: [1 0 3 4 5], changes in b: [0 3 4 5]\n",
+            "effect on a: [1 0 3 4 5], changes in c: [1 0 6 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "b is a view, so it shares the same memory buffer as a.\n",
+        "Modifying b modifies a.\n",
+        "Slicing does NOT create a new array unless .copy() is used.\n",
+        "\n",
+        ".copy() allocates new memory → isolation guaranteed.\n",
+        "Use copy() when modifying arrays you got via slicing; otherwise you introduce side-effects and hidden bugs."
+      ],
+      "metadata": {
+        "id": "BzLzYkSxvaKi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "matrix = [[1, 2, 3], [4, 5, 6]]\n",
+        "\n",
+        "row_means_manual = [sum(row)/len(row) for row in matrix]\n",
+        "print(f\"manual mean: {row_means_manual}\")\n",
+        "\n",
+        "row_means_numpy = np.mean(matrix, axis=1)\n",
+        "print(f\"mean numpy: {row_means_numpy}\")"
+      ],
+      "metadata": {
+        "id": "Y1tdwXS6rIHx",
+        "outputId": "a78f73b9-9e7a-4daa-c6da-41699ee74bdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "manual mean: [2.0, 5.0]\n",
+            "mean numpy: [2. 5.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NumPy uses optimized C loops and vectorized operations.\n",
+        "My manual Python version is slower and cannot scale.\n",
+        "Difference teaches why vectorization matters.\n"
+      ],
+      "metadata": {
+        "id": "lUsCXmslxKxa"
+      }
     }
   ],
   "metadata": {
