main idea related to dot and @ product, masking float, broadcasting, norms , cosine similarity and angles .

--- a/day_2-15Nov.ipynb
+++ b/day_2-15Nov.ipynb
@@ -25,7 +25,7 @@
         "difference between dot and @\n",
         "1. dot is applied to vector-vector, vector-matrix, matrix-matrix.\n",
         "2. @ can also be doen with all.\n",
-        "3. dot choose behavior depending on shape (special case)\n",
+        "3. dot choose behavior depends only fpr 1D arrays. 1D.1D -> scalar.\n",
         "4. @ follows (mXn)@(nXp) and gives (mXp)\n",
         "5. in dot vector-vector gives scalar\n",
         "6. edge case :- in (1X3)(3X1) matrix output is matrix of(1X1) but numpy    convert it to scalar value and consider it as dot product."
@@ -38,6 +38,7 @@
       "cell_type": "markdown",
       "source": [
         "---\n",
+        "\n",
         "1D array in matmul\n",
         "\n",
         "---\n",
@@ -72,8 +73,12 @@
         "\n",
         "\n",
         "---\n",
+        "only for @ (matmul) not for dot and broadcasting.\n",
         "1. rule: if value is at left side the (n,) -> (1,n)\n",
-        "2. rule: if value is at right side the (n,) -> (n,1)\n"
+        "2. rule: if value is at right side the (n,) -> (n,1)\n",
+        "\n",
+        "*   left-side vector → row\n",
+        "*   right-side vector → column\n"
       ],
       "metadata": {
         "id": "4dXKDA2yIJi-"
@@ -85,7 +90,7 @@
         "---\n",
         "element wise multiplication vs (dot and @)\n",
         "1. in element wise only element and scalar value are multiplied, the shape is same.\n",
-        "2. in dot and @ elements are multiplied and then added, shape is reduced to scalar.\n",
+        "2. in dot and @ elements are multiplied and then added, shape is reduced.\n",
         "---\n",
         "\n",
         "cosine similarity and angle:\n",
@@ -124,7 +129,7 @@
         "2. they must be equal or one must be 1. eg:- (4,1) and (4,3) accepted, because 1 stretchs to 4.\n",
         "3, missing dimensions is treaded as 1. eg:- (3,) and (2,3) accepted, (3,) treated as (1,3) row vector.\n",
         "eg: (3,) + (2,) cannot broadcast.\n",
-        "eg: (2,3) - (3,) not accepted as convert to (3,1) due to left side as it becomes col vector and dont match value from right to left.\n",
+        "eg: (2,3) - (3,) accepted as convert to (1,3).\n",
         "----\n",
         "Vectorization is faster because NumPy executes operations in optimized C code using SIMD on contiguous memory, avoiding Python’s slow per-iteration overhead.\n",
         "\n",
@@ -178,7 +183,7 @@
         "print(f\"@ product : {arr2@arr1}, dim {(arr2@arr1).ndim}, shape:{(arr2@arr1).shape}\")\n",
         "print(f\"dot product of vector and matrix: {np.dot(arr_vect,arr2)}, dim {np.dot(arr_vect,arr2).ndim}, shape:{np.dot(arr_vect,arr2).shape}, gives scalar value.\")\n",
         "print(f\"@ product of vector and matrix: {arr_vect@arr2},dim {(arr_vect@arr2).ndim}, shape:{(arr_vect@arr2).shape}, A 1D vector behaves like a row vector during @ (matmul) as it is at left side .NumPy automatically upgrades (3,) into (1,3) for matrix multiplication.\")\n",
-        "print(f\"@ product of vector and matrix: {arr1@arr_vect},dim {(arr1@arr_vect).ndim}, shape:{(arr1@arr_vect).shape}, A 1D vector behaves like a rcol vector during @ (matmul) as it is at right side .NumPy automatically upgrades (3,) into (3,1) for matrix multiplication.\")\n",
+        "print(f\"@ product of vector and matrix: {arr1@arr_vect},dim {(arr1@arr_vect).ndim}, shape:{(arr1@arr_vect).shape}, A 1D vector behaves like a col vector during @ (matmul) as it is at right side .NumPy automatically upgrades (3,) into (3,1) for matrix multiplication.\")\n",
         "\n",
         "try:\n",
         "  print(f\"@ product of vector and matrix: {arr_vect@arr1},dim {(arr_vect@arr1).ndim}, shape:{(arr_vect@arr1).shape}\")\n",
@@ -582,11 +587,11 @@
         "print(f\"flatten vector: {flatten_vect}\")"
       ],
       "metadata": {
-        "id": "sMe_JXeRPLKe",
-        "outputId": "3769751a-3a02-4aa0-a5d7-90c007c13179",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sMe_JXeRPLKe",
+        "outputId": "3769751a-3a02-4aa0-a5d7-90c007c13179"
       },
       "execution_count": 57,
       "outputs": [
