understanding about copy and view. affect of ravel ,flatten, reshape and slice on array - gives copy or view , understand use of C and F memory allocation layout.

--- a/day_3-16Nov.ipynb
+++ b/day_3-16Nov.ipynb
@@ -78,13 +78,13 @@
         "print(f\"slice create view? {truth_mask}, if true memory is shared and its view or vice-versa copy is created with different memory.\")\n"
       ],
       "metadata": {
-        "id": "qtcu1bZKo9-J",
-        "outputId": "994711fc-4192-4746-e72f-8381c2008220",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qtcu1bZKo9-J",
+        "outputId": "9b58816b-b91c-435a-914f-870d54e02d4b"
       },
-      "execution_count": 9,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
         "*   Modifying the slice changes the original array because they share memory.\n",
         "*   warning - when editing sliced array, changes in original array will occure.\n",
         "*   note - if change value in view using index eg: b[0] = 9 ,but the index in original array maybe not same.\n",
-        "*   slice with step = 1 is contiguous eg: a[1:3] ,step != 1 is not contiguous eg: arr[:, ::3].\n",
+        "*   slice Slicing ALWAYS creates a view (contiguous or not).\n",
         "\n",
         "2. fancy indexing creates copy:\n",
         "*   NumPy allocates a new array for the requested elements.\n",
@@ -147,7 +147,7 @@
         "\n",
         "arr = np.arange(12).reshape(3,4)\n",
         "print(f\"arra C_continuous: {arr}\")\n",
-        "print(f\"if my calculations are correct going down a row shall require 32 bits as travelling 4 elements means 4x8 = 32 bits and to travel side p column it will require 8 byte as 1x8 = 8 bytes, ans:{arr.strides}\")\n",
+        "print(f\"if my calculations are correct going down a row shall require 32 byte as travelling 4 elements means 4x8 = 32 byte and to travel side p column it will require 8 byte as 1x8 = 8 bytes, ans:{arr.strides}\")\n",
         "print(f\"lets check: {arr.dtype.itemsize}, so it is int64 , my answer was correct.\")\n",
         "\n",
         "print(f\"flags : {arr.flags}, memory is stored in C_CONTIGUOUs\")\n",
@@ -158,11 +158,11 @@
         "print(f\"flag of fortran array: {arr_f.flags}\")\n"
       ],
       "metadata": {
-        "id": "rBkbjJDnyVty",
-        "outputId": "84c9ba26-8e50-4945-d7c5-fc348abc5429",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rBkbjJDnyVty",
+        "outputId": "01584ba6-355e-4147-d90f-777ffdb7e07b"
       },
       "execution_count": 18,
       "outputs": [
@@ -173,7 +173,7 @@
             "arra C_continuous: [[ 0  1  2  3]\n",
             " [ 4  5  6  7]\n",
             " [ 8  9 10 11]]\n",
-            "if my calculations are correct going down a row shall require 32 bits as travelling 4 elements means 4x8 = 32 bits and to travel side p column it will require 8 byte as 1x8 = 8 bytes, ans:(32, 8)\n",
+            "if my calculations are correct going down a row shall require 32 byte as travelling 4 elements means 4x8 = 32 byte and to travel side p column it will require 8 byte as 1x8 = 8 bytes, ans:(32, 8)\n",
             "lets check: 8, so it is int64 , my answer was correct.\n",
             "flags :   C_CONTIGUOUS : True\n",
             "  F_CONTIGUOUS : False\n",
@@ -274,13 +274,13 @@
         "print(f\"strides of a: {a.strides}, strides of arr_slice: {arr_slice.strides}, # strides scaled by slice step,and not continuous.\")"
       ],
       "metadata": {
-        "id": "AKtdNldJIMwY",
-        "outputId": "2387f3e9-9d73-4cc6-a647-353fe910911d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AKtdNldJIMwY",
+        "outputId": "e9ab68c7-2a93-447c-c5be-4971a170ed20"
       },
-      "execution_count": 33,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
             " [ 8  9 10 11]], a.T: [[ 0  4  8]\n",
             " [ 1  5  9]\n",
             " [ 2  6 10]\n",
-            " [ 3  7 11]], first 3 values will be 0,1,2 \n",
+            " [ 3  7 11]], first 3 values will be 0,4,8 \n",
             "flag of a:   C_CONTIGUOUS : True\n",
             "  F_CONTIGUOUS : False\n",
             "  OWNDATA : False\n",
@@ -313,7 +313,7 @@
             " [ 8  9 10 11]], sliced array: [[ 0  2]\n",
             " [ 4  6]\n",
             " [ 8 10]]\n",
-            "strides of a: (32, 8), strides of arr_slice: (32, 16), # strides scaled by slice step\n"
+            "strides of a: (32, 8), strides of arr_slice: (32, 16), # strides scaled by slice step,and not continuous.\n"
           ]
         }
       ]
@@ -408,13 +408,13 @@
         "print(z.base is x)  # True → view\n"
       ],
       "metadata": {
-        "id": "OHBQnb0ssPFk",
-        "outputId": "6c9228b9-4e21-4447-d8b3-0ef09c572bc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OHBQnb0ssPFk",
+        "outputId": "827767c6-fc0f-43b1-fa4f-ea92883695e6"
       },
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,13 +492,13 @@
         "\n"
       ],
       "metadata": {
-        "id": "RFgn-SmItQ_U",
-        "outputId": "25a3189e-65ef-43e6-94e4-ead9a453cb99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RFgn-SmItQ_U",
+        "outputId": "1ed0072a-82ed-4e5a-85a0-50d85152ff38"
       },
-      "execution_count": 15,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,7 +562,7 @@
         "* ravel() is fast in contiguous memory and flatten() is slow.\n",
         "\n",
         "4. How does C vs F order affect reshaping and memory?\n",
-        "* C is fast due to continuous memory as its row wise , whereas F is slow due to memory management in column wise manner.\n",
+        "* C is fast due to continuous memory as its row wise , whereas F is slow due to memory management but fast for column wise operations.\n",
         "\n",
         "5. Why is knowing view vs copy important in ML preprocessing?\n",
         "* knowing view and copy is important to undertand the representation of memory, whether its continuous or non- contiguous. This affects the speed of code if heavy iteration is involved."
@@ -575,9 +575,18 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "GMAkK9SU5vhC"
+        "id": "v2GybeP3EIkJ"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GMAkK9SU5vhC"
+      },
+      "execution_count": 21,
       "outputs": []
     }
   ],
