understanding about copy and view. affect of ravel ,flatten, reshape and slice on array - gives copy or view , understand use of C and F memory allocation layout.

--- a/day_3-16Nov.ipynb
+++ b/day_3-16Nov.ipynb
@@ -479,7 +479,7 @@
         "x2 = x.reshape(3,2)\n",
         "x3 = x.reshape(6,1)\n",
         "print(f\"x: {x}, x1: {x1}, x2: {x2}, x3: {x3}\")\n",
-        "print(f\"type of x1: {x1.base is x}; type of x2: {x2.base is x}; type of x3: {x3.base is x3} false because it is non-contiguous ; - if true its a view and false its copy.\")\n",
+        "print(f\"type of x1: {x1.base is x}; type of x2: {x2.base is x}; type of x3: {x3.base is x} ; - if true its a view because c_contiguous layer of memory and false its copy.\")\n",
         "\n",
         "#4. transpose and flatten\n",
         "m = np.arange(6)\n",
@@ -496,9 +496,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RFgn-SmItQ_U",
-        "outputId": "1ed0072a-82ed-4e5a-85a0-50d85152ff38"
+        "outputId": "22dea548-f481-4491-f238-e69c3fe4659c"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +516,7 @@
             " [3]\n",
             " [4]\n",
             " [5]]\n",
-            "type of x1: True; type of x2: True; type of x3: False false because it is non-contiguous ; - if true its a view and false its copy.\n",
+            "type of x1: True; type of x2: True; type of x3: True false because it is non-contiguous ; - if true its a view and false its copy.\n",
             "value of m: [0 1 2 3 4 5], shape of m : (6,), value of n:[0 1 2 3 4 5], shape of n: (6,)\n",
             "copy(false) or view(true) n of m:True\n",
             "value of o: [0 1 2 3 4 5], shape of o: (6,)\n",
@@ -548,7 +548,7 @@
         "5 Revision Questions:\n",
         "\n",
         "1. Slice vs fancy indexing: which creates a view?\n",
-        "* slice with step = 1 is contiguous it create view eg: a[1:3] ,step != 1 is not contiguous it creates copy eg: arr[:, ::3].\n",
+        "* slice always view.\n",
         "* fancy indexing create copy.\n",
         "\n",
         "2. What does .strides tell you?\n",
