Enhance output with additional explanation comment
Added a comment explaining the behavior of mean percentage match under certain conditions.

--- a/array_shredding_similarity.ipynb
+++ b/array_shredding_similarity.ipynb
@@ -235,7 +235,8 @@
         "\n",
         "print(\"Final Mean Cosine Similarity:\", cosine_final)\n",
         "print(\"Final Mean Euclidean Distance:\", euclid_final)\n",
-        "print(\"Final Mean Percent Match:\", score_final)\n"
+        "print(\"Final Mean Percent Match:\", score_final)\n",
+        "# after certain increase in varience say value varies from 1-10000000 or more, mean percentage match will not go below 1%.\n",
       ],
       "metadata": {
         "id": "3yqhqNRVY37g",
