related to shreding the array then comparing with array similar to output array size. output give was depending on varience of value say 0,1 containing array give arount 50% similarity, whereas when increasing rhe values % decrease and after a range it hits platuae eg: array of values 1 to 10000000 or more will give value around 1 not less than ir.

--- a/array_shredding_similarity.ipynb
+++ b/array_shredding_similarity.ipynb
@@ -88,11 +88,11 @@
         "print(\"\\nExact matches (100%):\", exact)\n"
       ],
       "metadata": {
-        "id": "USE6RgaEXU64",
-        "outputId": "6b753a2f-d36e-462f-f864-366d085efd66",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "USE6RgaEXU64",
+        "outputId": "6b753a2f-d36e-462f-f864-366d085efd66"
       },
       "execution_count": 53,
       "outputs": [
@@ -228,7 +228,7 @@
         "    return final_cosine, final_euclid, final_score\n",
         "\n",
         "np.random.seed(69)\n",
-        "A = np.random.randint(0, 2, (10, 10))\n",
+        "A = np.random.randint(1, 100, (10, 10))\n",
         "\n",
         "print(A)\n",
         "cosine_final, euclid_final, score_final = compute_final_means(A)\n",
@@ -236,34 +236,34 @@
         "print(\"Final Mean Cosine Similarity:\", cosine_final)\n",
         "print(\"Final Mean Euclidean Distance:\", euclid_final)\n",
         "print(\"Final Mean Percent Match:\", score_final)\n",
-        "# after certain increase in varience say value varies from 1-10000000 or more, mean percentage match will not go below 1%.\n",
+        "# after certain increase in varience say value varies from 1-10000000 or more, mean percentage match will not go below 1%."
       ],
       "metadata": {
-        "id": "3yqhqNRVY37g",
-        "outputId": "f23269d3-9565-499b-a18e-3ae76b21e36f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3yqhqNRVY37g",
+        "outputId": "ddb3878b-eb8f-4ae8-90aa-2e7218f30232"
       },
-      "execution_count": 64,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0 1 1 1 0 1 0 1 0 1]\n",
-            " [0 1 0 0 0 0 1 0 0 1]\n",
-            " [1 1 0 1 0 0 1 1 0 0]\n",
-            " [1 1 0 1 0 1 1 1 0 0]\n",
-            " [1 1 0 1 0 0 0 1 0 1]\n",
-            " [1 1 0 1 0 1 0 1 0 1]\n",
-            " [1 0 1 0 1 0 1 0 1 0]\n",
-            " [0 1 0 1 0 1 0 0 1 1]\n",
-            " [1 1 1 0 0 1 0 0 1 0]\n",
-            " [1 1 0 1 1 1 0 1 1 1]]\n",
-            "Final Mean Cosine Similarity: 0.5397386342437055\n",
-            "Final Mean Euclidean Distance: 3.417126687264784\n",
-            "Final Mean Percent Match: 52.666666666666664\n"
+            "[[55 76 74 91 56 21 50 23 10 57]\n",
+            " [98 39 97 89 13 38 76 54  4 81]\n",
+            " [40 25  3 40 25 48 91 76 45 24]\n",
+            " [36 44 87 15 22 50 71 70 77 15]\n",
+            " [15 92 62 49 46 17 94 84 64 12]\n",
+            " [79 19 45 25 79 30  1 46 63 42]\n",
+            " [47 84 28 54 49 65 50 97 41 47]\n",
+            " [ 8 54 69 10 42 10 83 56 50 94]\n",
+            " [22 54 36  2 30 13  7 72 66  6]\n",
+            " [26 10 65 38 61 30 81 52 25 29]]\n",
+            "Final Mean Cosine Similarity: 0.7663510900226121\n",
+            "Final Mean Euclidean Distance: 182.21415508409194\n",
+            "Final Mean Percent Match: 2.5\n"
           ]
         }
       ]
